# pbsplash

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  meson.build  meson_options.txt  pbsplash.c
include/: framebuffer.h  logo.h  nanosvg.h  nanosvgrast.h  pbsplash.h  tfblib.h  tfblib_drm.h  timespec.h
src/: animate.c  drawing.c  drm.c  drm_stub.c  fb.c  meson.build  nanosvg.c  pbsplash.c  timespec.c
